Finalize localization and dimens constants

--- a/lib/src/localization/l10n/app_ar.arb
+++ b/lib/src/localization/l10n/app_ar.arb
@@ -1,10 +1,7 @@
 {
-    "appTitle": "Mobii - User List",
-    "login": "Login",
-    "email": "Email",
-    "password": "Password",
-    "dashboard": "Dashboard",
-    "home": "Home",
-    "settings": "Settings",
-    "logout": "Logout"
+    "appTitle": "Mobii - قائمة المستخدمين",
+    "userList": "قائمة المستخدم",
+    "noDataAvailable": "لا تتوافر بيانات",
+    "error": "خطأ:",
+    "stack": "كومة:"
 }
